--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       -moz-box-shadow: -5px 10px 15px gray;
       font-family: sans-serif;
     }
-em{padding:0;margin:0;padding-bottom:9px;}    
+em{padding:0;margin:0;padding-bottom:9px;margin-top:2px;}    
   </style>
   <script type="text/javascript">
 	var keyCodes=new Array(10);
